WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152559
ASSERT(m_nsResponse) in ResourceResponse::platformCertificateInfo() when running tests in iOS simulator
https://bugs.webkit.org/show_bug.cgi?id=152559
Summary
ASSERT(m_nsResponse) in ResourceResponse::platformCertificateInfo() when runn...
Alexey Proskuryakov
Reported
2015-12-25 10:51:44 PST
I get this assertion every time when running tests in debug mode. It's a regression, as I've been able to run tests in debug mode a few months ago. $ run-webkit-tests --ios-simulator js/intl-collator.html --no-retry --no-timeout #1 0x0000000110eb3455 in WebCore::ResourceResponse::platformCertificateInfo() const at /Volumes/Data/Safari/OpenSource/Source/WebCore/platform/network/cocoa/ResourceResponseCocoa.mm:70 #2 0x0000000112461cb4 in WebCore::ResourceResponseBase::includeCertificateInfo() const at /Volumes/Data/Safari/OpenSource/Source/WebCore/platform/network/ResourceResponseBase.cpp:181 #3 0x00000001098c6962 in WebKit::NetworkLoad::sharedDidReceiveResponse(WebCore::ResourceResponse const&) at /Volumes/Data/Safari/OpenSource/Source/WebKit2/NetworkProcess/NetworkLoad.cpp:141 #4 0x00000001098c6b6d in WebKit::NetworkLoad::didReceiveResponseAsync(WebCore::ResourceHandle*, WebCore::ResourceResponse const&) at /Volumes/Data/Safari/OpenSource/Source/WebKit2/NetworkProcess/NetworkLoad.cpp:232 #5 0x00000001124510e5 in ::___ZN7WebCore55ResourceHandleCFURLConnectionDelegateWithOperationQueue18didReceiveResponseEP16_CFURLConnectionP14_CFURLResponse_block_invoke() at /Volumes/Data/Safari/OpenSource/Source/WebCore/platform/network/cf/ResourceHandleCFURLConnectionDelegateWithOperationQueue.cpp:162
Attachments
proposed fix
(1.56 KB, patch)
2015-12-25 11:05 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-12-25 10:54:25 PST
When this happens, m_nsResponse is null, but m_cfResponse is not null. I'm beginning to suspect
http://trac.webkit.org/r194378
Alexey Proskuryakov
Comment 2
2015-12-25 11:05:40 PST
Created
attachment 267921
[details]
proposed fix Yes, definitely that. I just made sure that this test runs, and didn't audit the rest of the patch. It's probably worth another look.
WebKit Commit Bot
Comment 3
2015-12-25 12:47:10 PST
Comment on
attachment 267921
[details]
proposed fix Clearing flags on attachment: 267921 Committed
r194420
: <
http://trac.webkit.org/changeset/194420
>
WebKit Commit Bot
Comment 4
2015-12-25 12:47:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug