ASSERT(m_nsResponse) in ResourceResponse::platformCertificateInfo() when running tests in iOS simulator https://bugs.webkit.org/show_bug.cgi?id=152559

Reviewed by Andy Estes.

Fix a regression from r194378.

* platform/network/cocoa/ResourceResponseCocoa.mm:
(WebCore::ResourceResponse::platformCertificateInfo):


Canonical link: https://commits.webkit.org/170658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194420 268f45cc-cd09-0410-ab3c-d52691b4dbfc